Fix #125307: Precision issues with MetalRT

Reverts a change in 5508b41a403d6b5b81a2d1d4c6ab4162f823bf5c that
disabled ray offsetting on MetalRT, which lead to rendering artifacts
in scenes far away from the origin.

Pull Request: https://projects.blender.org/blender/blender/pulls/126003